multiple todos completed: - add favicon - fix about page - write README

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -63,5 +63,5 @@
   <script src="/static/vendor/bootstrap.bundle.min.js"></script>
 
 </body>
-
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </html>
