--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -53,9 +53,9 @@
       <div class="container">
       <div class="row mt-5"></div>
       <div class="row">
-          <div class="col-lg-12">
-            */ FIXME: */
-      <p style="text-align: center;">DevQuotes is a lightweight web application app for kubernetes test</p>
+      <div class="col-lg-12">
+      <h2 style="text-align: center;">DevQuotes is a lightweight cloud native web app for kubernetes tests </h2>
+      <h3 style="text-align: center;"><a href="https://github.com/brokenpip3/devquotes">https://github.com/brokenpip3/devquotes</a></h3>
       </div>
       </div>
       </div>
